.provarCaches/00D410000011HE0EAM/objects/rstkf__glacct__c.object
<CustomObject>
    <customHelpPage>rstkf__objecthelp_glacct</customHelpPage>
    <description>glacct__c</description>
    <fields>
        <fullName>rstkf__GL_Account_ID_18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GL Account ID 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glacct_cmpno__r.rstkf__glcmp_cmpno__r.rstk__sycmp_cmpno__c &amp; &apos;_&apos; &amp; rstkf__glacct_acct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__glacct_acct__c + &apos; (&apos; + LEFT( rstkf__glacct_desc__c , (77 - LEN(rstkf__glacct_acct__c) )) + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glacct_acct__c</fullName>
        <label>Account Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glacct_apaccttype__c</fullName>
        <label>AP Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Accrued Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Cash Account</fullName>
                </value>
                <value>
                    <fullName>Credit Card Clearing</fullName>
                </value>
                <value>
                    <fullName>Foreign Exchange Variance</fullName>
                </value>
                <value>
                    <fullName>Freight</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>Terms Discount Taken</fullName>
                </value>
                <value>
                    <fullName>Trade Discount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glacct_araccttype__c</fullName>
        <label>AR  Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accounts Receivable</fullName>
                </value>
                <value>
                    <fullName>Bank Payment Variance</fullName>
                </value>
                <value>
                    <fullName>Bank Payment Variance - Foreign Currency</fullName>
                </value>
                <value>
                    <fullName>Cash Account</fullName>
                </value>
                <value>
                    <fullName>Cash Discounts Allowed</fullName>
                </value>
                <value>
                    <fullName>Cash Receipts Multicurrency Rounding</fullName>
                </value>
                <value>
                    <fullName>Credit Card Clearing</fullName>
                </value>
                <value>
                    <fullName>Credit Card Processing Fee</fullName>
                </value>
                <value>
                    <fullName>Finance Charge Interest Earned</fullName>
                </value>
                <value>
                    <fullName>Foreign Exchange Variance</fullName>
                </value>
                <value>
                    <fullName>Interest Expense</fullName>
                </value>
                <value>
                    <fullName>Interest Income</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>Write-off/Write-up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glacct_category1__c</fullName>
        <inlineHelpText>This field is used to categorize GL Accounts within their specified Account Type</inlineHelpText>
        <label>Account Category 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>rstkf__glacct_type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current Assets</fullName>
                </value>
                <value>
                    <fullName>Current Liabilities</fullName>
                </value>
                <value>
                    <fullName>Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Gross Profit</fullName>
                </value>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>Long Term Liabilities</fullName>
                </value>
                <value>
                    <fullName>Operating Expenses</fullName>
                </value>
                <value>
                    <fullName>Shareholders Funds</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glacct_category2__c</fullName>
        <inlineHelpText>This field is used to further categorize GL Accounts within the their designated Category 1</inlineHelpText>
        <label>Account Category 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>rstkf__glacct_category1__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accruals and Deferred Income</fullName>
                </value>
                <value>
                    <fullName>Administration Costs</fullName>
                </value>
                <value>
                    <fullName>Bank and Cash</fullName>
                </value>
                <value>
                    <fullName>Capital and Reserves</fullName>
                </value>
                <value>
                    <fullName>Cost of Goods Sold</fullName>
                </value>
                <value>
                    <fullName>Creditors</fullName>
                </value>
                <value>
                    <fullName>Creditors Due After 1 Year</fullName>
                </value>
                <value>
                    <fullName>Debtors</fullName>
                </value>
                <value>
                    <fullName>Depreciation</fullName>
                </value>
                <value>
                    <fullName>Employment Creditors</fullName>
                </value>
                <value>
                    <fullName>Finance Costs</fullName>
                </value>
                <value>
                    <fullName>Fixtures Fittings and Equipment</fullName>
                </value>
                <value>
                    <fullName>Intangible Assets</fullName>
                </value>
                <value>
                    <fullName>Land and Buildings</fullName>
                </value>
                <value>
                    <fullName>Marketing Expenses</fullName>
                </value>
                <value>
                    <fullName>Other Income and Expenses</fullName>
                </value>
                <value>
                    <fullName>Prepayments and Accrued Income</fullName>
                </value>
                <value>
                    <fullName>Professional Fees</fullName>
                </value>
                <value>
                    <fullName>Sales Revenue</fullName>
                </value>
                <value>
                    <fullName>Staff Costs</fullName>
                </value>
                <value>
                    <fullName>Stock</fullName>
                </value>
                <value>
                    <fullName>Tax Liability</fullName>
                </value>
                <value>
                    <fullName>Taxation</fullName>
                </value>
                <value>
                    <fullName>Travel Expenses</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glacct_category3__c</fullName>
        <inlineHelpText>This field is used to further categorize GL Accounts within the their designated Category 2</inlineHelpText>
        <label>Account Category 3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>rstkf__glacct_category2__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
                <value>
                    <fullName>Retained Earnings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glacct_cfr_gl_type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>GL Type</description>
        <label>Z_OBSOLETE</label>
        <referenceTo>rstkf__gltype__c</referenceTo>
        <relationshipLabel>GL Accounts</relationshipLabel>
        <relationshipName>glaccts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glacct_cfsection__c</fullName>
        <description>This field allows for each GL Account to be associated with one of the Cash Flow Report Sections.  All accounts with the same Cash Flow Section value will be included in that section of the report.</description>
        <inlineHelpText>This field allows for each GL Account to be associated with one of the Cash Flow Report Sections.  All accounts with the same Cash Flow Section value will be included in that section of the report.</inlineHelpText>
        <label>RFA Cash Flow Report Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisition of subsidiaries, net of cash acquired</fullName>
                </value>
                <value>
                    <fullName>Amortization of intangible assets</fullName>
                </value>
                <value>
                    <fullName>Asset reunification</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Depreciation of property, plant and equipment (excluding right-of-use assets)</fullName>
                </value>
                <value>
                    <fullName>Depreciation of right-of-use assets</fullName>
                </value>
                <value>
                    <fullName>Dividends paid to equity shareholders of the Parent</fullName>
                </value>
                <value>
                    <fullName>Effect of exchange rates on cash and cash equivalents</fullName>
                </value>
                <value>
                    <fullName>Expenses on RoV</fullName>
                </value>
                <value>
                    <fullName>Income taxes paid</fullName>
                </value>
                <value>
                    <fullName>Interest expense on lease liabilities</fullName>
                </value>
                <value>
                    <fullName>Interest paid</fullName>
                </value>
                <value>
                    <fullName>Interest received</fullName>
                </value>
                <value>
                    <fullName>Loss on disposal of intangibles</fullName>
                </value>
                <value>
                    <fullName>Loss on disposal of property, plant and equipment</fullName>
                </value>
                <value>
                    <fullName>Net cash flow from inventories</fullName>
                </value>
                <value>
                    <fullName>Net cash flow from provisions</fullName>
                </value>
                <value>
                    <fullName>Net cash flow from payables</fullName>
                </value>
                <value>
                    <fullName>Net cash flow from receivables</fullName>
                </value>
                <value>
                    <fullName>Net finance cost</fullName>
                </value>
                <value>
                    <fullName>New borrowings – bank loan</fullName>
                </value>
                <value>
                    <fullName>New borrowings – finance leases</fullName>
                </value>
                <value>
                    <fullName>Other adjustments</fullName>
                </value>
                <value>
                    <fullName>Payment of lease liabilities</fullName>
                </value>
                <value>
                    <fullName>Proceeds from disposal of property, plant and equipment</fullName>
                </value>
                <value>
                    <fullName>Proceeds from share issues</fullName>
                </value>
                <value>
                    <fullName>Profit before taxation</fullName>
                </value>
                <value>
                    <fullName>Purchase of own shares</fullName>
                </value>
                <value>
                    <fullName>Purchases of intangible assets</fullName>
                </value>
                <value>
                    <fullName>Purchases of property, plant and equipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glacct_cfsection_idx__c</fullName>
        <description>This field contains the Cash Flow Section value for this account in an index field</description>
        <externalId>true</externalId>
        <inlineHelpText>This field contains the Cash Flow Section value for this account in an index field</inlineHelpText>
        <label>RFA Cash Flow Report Category (Indexed)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glacct_classref__c</fullName>
        <description>glacct_classref__c</description>
        <label>Classification Reference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glacct_cmpno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>GL Accounts</relationshipLabel>
        <relationshipName>glaccts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glacct_controlaccttype__c</fullName>
        <label>Type of Control Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not a Control Account</fullName>
                    <default>true</default>
                    <label>Not a Control Account</label>
                </value>
                <value>
                    <fullName>Accounts Receivable Account</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable Account</fullName>
                </value>
                <value>
                    <fullName>On-Hand Inventory</fullName>
                </value>
                <value>
                    <fullName>WIP inventory</fullName>
                </value>
                <value>
                    <fullName>Combined On-Hand and WIP inventory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glacct_desc__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glacct_dispapdtl__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Z_OBSOLETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glacct_dispardtl__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Display AR Related Txn Detail</description>
        <label>Z_OBSOLETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glacct_dispmfgdtl__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Display Mfg. Related Txn Detail</description>
        <label>Z_OBSOLETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glacct_faacct__c</fullName>
        <defaultValue>false</defaultValue>
        <description>glacct_faacct__c</description>
        <inlineHelpText>When checked, indicates this Account is associated with one or more Fixed Assets - and when used on certain transactions, the system will require an Asset ID be specified.</inlineHelpText>
        <label>Fixed Asset Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glacct_fxtype__c</fullName>
        <description>FX Type</description>
        <inlineHelpText>This picklist controls how the UFX process treats this account.</inlineHelpText>
        <label>FX Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monetary Cash</fullName>
                </value>
                <value>
                    <fullName>Monetary Non-Cash</fullName>
                </value>
                <value>
                    <fullName>Non-Monetary</fullName>
                </value>
                <value>
                    <fullName>P&amp;L Monetary</fullName>
                </value>
                <value>
                    <fullName>P&amp;L Non-Monetary</fullName>
                </value>
                <value>
                    <fullName>Historical</fullName>
                    <isActive>false</isActive>
                    <label>Historical</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glacct_gltxnlistfieldset__c</fullName>
        <label>GL Txn Inquiry Detail Field Set</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glacct_inactiveind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glacct_normalbal__c</fullName>
        <label>Normal Balance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Debit</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glacct_parentglacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field provides a reference to the associated GL Account in the Parent Company for Accounts in a Subsidiary Company.</inlineHelpText>
        <label>Associated GL Account in Parent Company</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>GL Accounts</relationshipLabel>
        <relationshipName>GL_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glacct_retainedearnings__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Retained Earnings Account</description>
        <inlineHelpText>If checked, this Capital account represents prior-years’ retained earnings. This field should be accurate if the company participates in a multi-currency consolidation; otherwise, it doesn’t matter if it’s check or unchecked.</inlineHelpText>
        <label>Retained Earnings Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glacct_type__c</fullName>
        <label>GL Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Liability</fullName>
                </value>
                <value>
                    <fullName>Capital</fullName>
                </value>
                <value>
                    <fullName>Revenue</fullName>
                </value>
                <value>
                    <fullName>Expense</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glacct_vatacct__c</fullName>
        <description>glacct_vatacct__c</description>
        <label>VAT Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not a VAT Account</fullName>
                    <default>true</default>
                    <label>Not a VAT Account</label>
                </value>
                <value>
                    <fullName>Incoming VAT</fullName>
                </value>
                <value>
                    <fullName>Outgoing VAT</fullName>
                </value>
                <value>
                    <fullName>Both Incoming and Outgoing VAT</fullName>
                </value>
                <value>
                    <fullName>VAT Clearing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__searchindex__c</fullName>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>GL Account</label>
    <listViews>
        <fullName>AKS_VIEW_GL</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>rstkf__glacct_cmpno__c</columns>
        <columns>rstkf__glacct_type__c</columns>
        <columns>rstkf__glacct_apaccttype__c</columns>
        <columns>rstkf__glacct_araccttype__c</columns>
        <columns>rstkf__glacct_cfsection_idx__c</columns>
        <columns>rstkf__glacct_controlaccttype__c</columns>
        <columns>rstkf__glacct_inactiveind__c</columns>
        <columns>rstkf__glacct_normalbal__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>rstkf__glacct_faacct__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glacct_cmpno__c</field>
            <operation>contains</operation>
            <value>Hello</value>
        </filters>
        <filters>
            <field>rstkf__glacct_type__c</field>
            <operation>equals</operation>
            <value>Asset,Liability,Capital</value>
        </filters>
        <label>AKS_VIEW_GL</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glacct_cmpno__c</columns>
        <columns>rstkf__glacct_acct__c</columns>
        <columns>rstkf__glacct_type__c</columns>
        <columns>rstkf__glacct_normalbal__c</columns>
        <columns>rstkf__glacct_cfsection_idx__c</columns>
        <columns>rstkf__glacct_cfsection__c</columns>
        <columns>rstkf__glacct_classref__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glacct_cmpno__c</field>
            <operation>contains</operation>
            <value>Hello</value>
        </filters>
        <filters>
            <field>rstkf__glacct_type__c</field>
            <operation>equals</operation>
            <value>Asset,Liability,Capital</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>GL_Accounts_Compa66ny100</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glacct_controlaccttype__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>rstkf__glacct_cmpno__c</columns>
        <columns>rstkf__glacct_acct__c</columns>
        <columns>rstkf__glacct_desc__c</columns>
        <columns>rstkf__glacct_type__c</columns>
        <columns>rstkf__glacct_apaccttype__c</columns>
        <columns>rstkf__glacct_araccttype__c</columns>
        <columns>rstkf__glacct_normalbal__c</columns>
        <columns>rstkf__glacct_inactiveind__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glacct_cmpno__c</field>
            <operation>contains</operation>
            <value>100</value>
        </filters>
        <label>GL Accounts - Company 10066</label>
    </listViews>
    <listViews>
        <fullName>GL_Accounts_Company100</fullName>
        <columns>rstkf__glacct_cmpno__c</columns>
        <columns>NAME</columns>
        <columns>rstkf__glacct_acct__c</columns>
        <columns>rstkf__glacct_desc__c</columns>
        <columns>rstkf__glacct_type__c</columns>
        <columns>rstkf__glacct_controlaccttype__c</columns>
        <columns>rstkf__glacct_normalbal__c</columns>
        <columns>rstkf__glacct_apaccttype__c</columns>
        <columns>rstkf__glacct_araccttype__c</columns>
        <columns>rstkf__glacct_inactiveind__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstkf__externalid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glacct_cmpno__c</field>
            <operation>contains</operation>
            <value>100</value>
        </filters>
        <label>GL Accounts - Company 100</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>GL_Accounts_Company_Hello</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>rstkf__glacct_cmpno__c</columns>
        <columns>rstkf__glacct_acct__c</columns>
        <columns>rstkf__glacct_desc__c</columns>
        <columns>rstkf__glacct_cfsection__c</columns>
        <columns>rstkf__glacct_controlaccttype__c</columns>
        <columns>rstkf__glacct_type__c</columns>
        <columns>rstkf__glacct_fxtype__c</columns>
        <columns>rstkf__glacct_normalbal__c</columns>
        <columns>rstkf__glacct_apaccttype__c</columns>
        <columns>rstkf__glacct_araccttype__c</columns>
        <columns>rstkf__glacct_cfsection_idx__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glacct_cmpno__c</field>
            <operation>contains</operation>
            <value>DT</value>
        </filters>
        <label>GL Accounts - Company Hello</label>
    </listViews>
    <listViews>
        <fullName>GL_Accounts_Filtered</fullName>
        <columns>rstkf__glacct_cmpno__c</columns>
        <columns>NAME</columns>
        <columns>rstkf__glacct_acct__c</columns>
        <columns>rstkf__glacct_normalbal__c</columns>
        <columns>rstkf__glacct_type__c</columns>
        <columns>rstkf__glacct_fxtype__c</columns>
        <columns>rstkf__glacct_inactiveind__c</columns>
        <columns>rstkf__glacct_cfsection__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>rstkf__glacct_apaccttype__c</columns>
        <columns>rstkf__glacct_araccttype__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glacct_cmpno__c</field>
            <operation>startsWith</operation>
            <value>Mountain</value>
        </filters>
        <label>GL Accounts - Filtered</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MS_GL_Accounts1</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glacct_cmpno__c</columns>
        <columns>rstkf__glacct_acct__c</columns>
        <columns>rstkf__glacct_desc__c</columns>
        <columns>rstkf__glacct_type__c</columns>
        <columns>rstkf__glacct_normalbal__c</columns>
        <columns>rstkf__glacct_controlaccttype__c</columns>
        <columns>rstkf__glacct_apaccttype__c</columns>
        <columns>rstkf__glacct_araccttype__c</columns>
        <columns>rstkf__glacct_faacct__c</columns>
        <columns>rstkf__glacct_vatacct__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glacct_cmpno__c</field>
            <operation>contains</operation>
            <value>Mountain Manufacturing (100</value>
        </filters>
        <filters>
            <field>rstkf__glacct_desc__c</field>
            <operation>contains</operation>
            <value>WO</value>
        </filters>
        <label>MS_GL Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Ms_GL_Accounts</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glacct_cmpno__c</columns>
        <columns>rstkf__glacct_type__c</columns>
        <columns>rstkf__glacct_acct__c</columns>
        <columns>rstkf__glacct_vatacct__c</columns>
        <columns>rstkf__glacct_desc__c</columns>
        <columns>rstkf__glacct_cfr_gl_type__c</columns>
        <columns>rstkf__glacct_gltxnlistfieldset__c</columns>
        <columns>rstkf__glacct_controlaccttype__c</columns>
        <columns>rstkf__glacct_apaccttype__c</columns>
        <columns>rstkf__glacct_araccttype__c</columns>
        <columns>rstkf__glacct_normalbal__c</columns>
        <columns>rstkf__glacct_inactiveind__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UPDATEDBY_USER</field>
            <operation>contains</operation>
            <value>pragati</value>
        </filters>
        <label>Ms-GL Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__Capslock_and_Subs</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glacct_cmpno__c</columns>
        <columns>rstkf__glacct_acct__c</columns>
        <columns>rstkf__glacct_desc__c</columns>
        <columns>rstkf__glacct_cfr_gl_type__c</columns>
        <columns>rstkf__glacct_controlaccttype__c</columns>
        <columns>rstkf__glacct_type__c</columns>
        <columns>rstkf__glacct_apaccttype__c</columns>
        <columns>rstkf__glacct_araccttype__c</columns>
        <columns>rstkf__glacct_normalbal__c</columns>
        <columns>rstkf__glacct_inactiveind__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glacct_cmpno__c</field>
            <operation>contains</operation>
            <value>CapsLock,Command,Control</value>
        </filters>
        <label>Capslock and Subs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__GL_Accounts_Filtered_23008</fullName>
        <columns>rstkf__externalid__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>rstkf__glacct_cmpno__c</columns>
        <columns>rstkf__glacct_acct__c</columns>
        <columns>rstkf__glacct_desc__c</columns>
        <columns>rstkf__glacct_controlaccttype__c</columns>
        <columns>rstkf__glacct_type__c</columns>
        <columns>rstkf__glacct_apaccttype__c</columns>
        <columns>rstkf__glacct_araccttype__c</columns>
        <columns>rstkf__glacct_normalbal__c</columns>
        <columns>rstkf__glacct_inactiveind__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glacct_cmpno__c</field>
            <operation>contains</operation>
            <value>Jon</value>
        </filters>
        <label>GL Accounts - Filtered - 23008</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__GL_Accounts_Filtered_c0S_Testing</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>rstkf__glacct_cmpno__c</columns>
        <columns>rstkf__externalid__c</columns>
        <columns>rstkf__glacct_acct__c</columns>
        <columns>rstkf__glacct_desc__c</columns>
        <columns>rstkf__glacct_controlaccttype__c</columns>
        <columns>rstkf__glacct_type__c</columns>
        <columns>rstkf__glacct_apaccttype__c</columns>
        <columns>rstkf__glacct_araccttype__c</columns>
        <columns>rstkf__glacct_cfr_gl_type__c</columns>
        <columns>rstkf__glacct_normalbal__c</columns>
        <columns>rstkf__glacct_inactiveind__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glacct_cmpno__c</field>
            <operation>contains</operation>
            <value>200</value>
        </filters>
        <label>GL Accounts - Filtered - c0S Testing</label>
        <language>en_US</language>
    </listViews>
</CustomObject>